[package]
authors = ["疯魔慕薇 <kfanjian@gmail.com>"]
description = "A modern and GC less Cloud Native Distribution."
edition = "2018"
name = "rustribution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build]
# rustc-wrapper = "~/.cargo/bin/sccache"

[dependencies]
actix-service = "2"
actix-slog = "0.2.1"
actix-web = "3"
actix-web-prom = {git = "https://github.com/nlopes/actix-web-prom"}
clap = "2.33"
handlers = {path = "handlers"}
serde = {version = "1.0", features = ["derive"]}
slog = "2.7.0"
slog-async = "2.6.0"
slog-scope = "4.4.0"
slog-term = "2.8.0"
storage = {path = "storage", features = ["backend-mem", "backend-filesystem"]}
structopt = "0.3"
toml = "0.5.8"

[workspace]
members = ["storage", "handlers"]
