[package]
authors = ["疯魔慕薇 <kfanjian@gmail.com>"]
edition = "2018"
name = "handlers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-service = "2"
actix-web = "3"
bytes = "0.5"
serde = {version = "1.0", features = ["derive"]}
sha256 = "1.0.2"
slog = "2.7.0"
storage = {path = "../storage", features = ["backend-mem", "backend-filesystem"]}
uuid = {version = "0.8", features = ["v4"]}
