[package]
authors = ["疯魔慕薇 <kfanjian@gmail.com>"]
edition = "2018"
name = "handlers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-service = "2"
actix-web = "3"
base64 = "0.13.0"
bytes = "0.5"
chrono = {version = "0.4", features = ["serde"]}
custom_error = "1.9.2"
hmac = "0.11.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9.5"
sha256 = "1.0.2"
slog = "2.7.0"
storage = {path = "../storage", features = ["backend-mem", "backend-filesystem"]}
uuid = {version = "0.8", features = ["v4"]}
