[package]
authors = ["疯魔慕薇 <kfanjian@gmail.com>"]
edition = "2018"
name = "storage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
custom_error = "1.9.2"
fs_extra = "1.2.0"
serde = {version = "1.0", features = ["derive"]}
slog = "2.7.0"
slog-scope = "4.4.0"
toml = "0.5.8"

[features]
backend-filesystem = []
backend-mem = []
